fix: slightly increase text stroke to 8px and reset letter-spacing to normal for better number aesthetics

--- a/src/components/AboutSection1.module.css
+++ b/src/components/AboutSection1.module.css
@@ -39,12 +39,12 @@
   margin: 0;
   width: 17.1354vw;
   font-size: inherit;
-  letter-spacing: -0.02em;
+  letter-spacing: normal;
   line-height: 90%;
   text-transform: uppercase;
   font-weight: 800;
   font-family: inherit;
-  -webkit-text-stroke: 5px currentColor;
+  -webkit-text-stroke: 8px currentColor;
 }
 .div {
   width: 7.8125vw;
@@ -87,12 +87,12 @@
   margin: 0;
   width: 15.1563vw;
   font-size: var(--fs-128);
-  letter-spacing: -0.02em;
+  letter-spacing: normal;
   line-height: 90%;
   text-transform: uppercase;
   font-weight: 800;
   font-family: var(--font-winter-sans-trial);
-  -webkit-text-stroke: 5px currentColor;
+  -webkit-text-stroke: 8px currentColor;
 }
 @media screen and (max-width: 925px) {
   .frameParent {
